2000-11-01  Dave Brolley  <brolley@cygnus.com>

	* lib/sim-defs.exp (run_sm_test): Correct comment. "output" and
	"xerror" options do not use a list of machines. Clear options from
	previous test case. Use "$cpu_option"  to identify the machine to the
	assembler, if specified.

Tue May 23 21:39:23 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* configure: Regenerated to track ../common/aclocal.m4 changes.

1999-09-15  Doug Evans  <devans@casey.cygnus.com>

	* sim/arm/b.cgs: New testcase.
	* sim/arm/bic.cgs: New testcase.
	* sim/arm/bl.cgs: New testcase.

Thu Sep  2 18:15:53 1999  Andrew Cagney  <cagney@b1.cygnus.com>

	* configure: Regenerated to track ../common/aclocal.m4 changes.

1999-08-30  Doug Evans  <devans@casey.cygnus.com>

	* lib/sim-defs.exp (run_sim_test): Rename all_machs arg to
	requested_machs, now is list of machs to run tests for.
	Delete locals AS,ASFLAGS,LD,LDFLAGS.  Use target_assemble
	and target_link instead.

1999-04-21  Doug Evans  <devans@casey.cygnus.com>

	* sim/m32r/nop.cgs: Add missing nop insn.

Mon Mar 22 13:28:56 1999  Dave Brolley  <brolley@cygnus.com>

	* sim/fr30/stb.cgs: Correct for unaligned access.
	* sim/fr30/sth.cgs: Correct for unaligned access.
	* sim/fr30/ldub.cgs: Fix typo: lduh->ldub. Correct
	for unaligned access.
	* sim/fr30/and.cgs: Test unaligned access.

Fri Feb  5 12:41:11 1999  Doug Evans  <devans@canuck.cygnus.com>

	* lib/sim-defs.exp (sim_run): Print simulator arguments log message.

1999-01-05  Doug Evans  <devans@casey.cygnus.com>

	* lib/sim-defs.exp (run_sim_test): New arg all_machs.
	* sim/fr30/allinsn.exp: Update.
	* sim/fr30/misc.exp: Update.
	* sim/m32r/allinsn.exp: Update.
	* sim/m32r/misc.exp: Update.

Fri Dec 18 17:19:34 1998  Dave Brolley  <brolley@cygnus.com>

	* sim/fr30/ldres.cgs: New testcase.
	* sim/fr30/copld.cgs: New testcase.
	* sim/fr30/copst.cgs: New testcase.
	* sim/fr30/copsv.cgs: New testcase.
	* sim/fr30/nop.cgs: New testcase.
	* sim/fr30/andccr.cgs: New testcase.