@@ -1,3 +1,9 @@
+2001-07-31  Ben Elliston  <bje@redhat.com>
+
+	* lib/sim-defs.exp (run_sim_test): Include a description such as
+	"assembling" or "linking" that identifies the phase a test fails
+	in, for easier analysis of failures.
+
 2000-11-01  Dave Brolley  <brolley@cygnus.com>
 
 	* lib/sim-defs.exp (run_sm_test): Correct comment. "output" and
